--- a/index.html
+++ b/index.html
@@ -1,159 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>92 draft randomizer</title>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background-color: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>92 Draft Randomizer</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      padding: 0;
-      box-sizing: border-box;
-      transition: padding 0.3s ease;
-    }
+        body {
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+        }
 
-    .image-block {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-      background-color: black;
-      overflow: hidden;
-      position: relative;
-      width: 150px; /* Base size */
-      height: 150px; /* Base size */
-      flex-shrink: 0;
-      transition: width 0.3s ease, height 0.3s ease;
-    }
+        .grid-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            width: 100vw;
+            height: 100vh;
+        }
 
-    .image-block img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-    }
+        .image-container {
+            width: 740px;
+            height: 560px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+        }
 
-    /* Responsive */
-    @media (max-width: 767px) {
-      .image-block {
-        width: 20vw;
-        height: 20vw;
-      }
-    }
-  </style>
+        .image-container img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            position: absolute;
+            display: none;
+        }
+
+        .image-container img.active {
+            display: block;
+        }
+    </style>
 </head>
 <body>
-  <div class="container" id="image-container"></div>
+    <div class="grid-container" id="gridContainer"></div>
 
-  <script>
-    const imageContainer = document.getElementById('image-container');
-    const images = [
-      'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg',
-'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg'
-    ];
+    <script>
+        const imageUrls = [
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
+        ];
 
-    const minBlockWidth = 150; // Minimum size for each block
+        const gridContainer = document.getElementById("gridContainer");
+        let imageContainers = [];
 
-    function getRandomImages() {
-      const shuffled = [...images];
-      for (let i = shuffled.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [shuffled[i], shuffled[j]] = [shuffled[j], shuffled[i]];
-      }
-      return shuffled;
-    }
+        function createImageContainer() {
+            let container = document.createElement("div");
+            container.classList.add("image-container");
 
-    function createImageBlock() {
-      const block = document.createElement('div');
-      block.classList.add('image-block');
-      
-      const randomImages = getRandomImages();
-      
-      randomImages.forEach((imageSrc, index) => {
-        const img = document.createElement('img');
-        img.src = imageSrc;
-        img.alt = `Image ${index + 1}`;
-        block.appendChild(img);
-      });
+            let shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
+            let images = [];
 
-      imageContainer.appendChild(block);
-      updateLayout();
-    }
+            shuffledImages.forEach((src, i) => {
+                let img = document.createElement("img");
+                img.src = src;
+                if (i === 0) img.classList.add("active");
+                container.appendChild(img);
+                images.push(img);
+            });
 
-    function updateLayout() {
-      const possibleColumns = Math.floor(window.innerWidth / minBlockWidth);
-      const columns = Math.min(possibleColumns, 10) || 1;
+            gridContainer.appendChild(container);
+            imageContainers.push({ container, images, index: 0 });
 
-      // Adjust the number of columns and padding
-      const containerWidth = imageContainer.offsetWidth;
-      const totalWidth = containerWidth - (columns * minBlockWidth);
-      const columnGap = totalWidth / (columns - 1);
+            updateGridSize();
+            cycleImages(imageContainers.length - 1);
+        }
 
-      imageContainer.style.padding = `0 ${columnGap / 2}px`; // Even out spacing between columns
+        function cycleImages(containerIndex) {
+            let imageSet = imageContainers[containerIndex];
+            setInterval(() => {
+                imageSet.images[imageSet.index].classList.remove("active");
+                imageSet.index = (imageSet.index + 1) % imageSet.images.length;
+                imageSet.images[imageSet.index].classList.add("active");
+            }, 300);
+        }
 
-      const blocks = document.querySelectorAll('.image-block');
-      const rows = Math.ceil(blocks.length / columns);
+        function updateGridSize() {
+            let numContainers = imageContainers.length;
+            let gridSize = Math.ceil(Math.sqrt(numContainers));
+            let newSize = Math.min(window.innerWidth / gridSize, window.innerHeight / gridSize);
 
-      blocks.forEach(block => {
-        block.style.width = `${containerWidth / columns}px`;
-        block.style.height = `${containerWidth / columns}px`;
-      });
-    }
+            imageContainers.forEach(({ container }) => {
+                container.style.width = `${newSize}px`;
+                container.style.height = `${(newSize / 740) * 560}px`;
+            });
+        }
 
-    // Event listeners for desktop and mobile
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter') {
-        createImageBlock();
-      }
-    });
+        document.addEventListener("keydown", (event) => {
+            if (event.key === "Enter") {
+                createImageContainer();
+            }
+        });
 
-    document.body.addEventListener('click', createImageBlock);
+        window.addEventListener("resize", updateGridSize);
 
-    window.addEventListener('resize', updateLayout);
-
-    // Initial image block
-    createImageBlock();
-  </script>
+        createImageContainer();
+    </script>
 </body>
 </html>
-
