--- a/index.html
+++ b/index.html
@@ -1,144 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>92 Draft Randomizer</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>92 Draft Randomizer</title>
+<style>
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
 
-        body {
-            background-color: black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: hidden;
-        }
+body {
+background-color: black;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+overflow: hidden;
+}
 
-        .grid-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            width: 100vw;
-            height: 100vh;
-        }
+.grid-container {
+display: grid;
+width: 100vw;
+height: 100vh;
+background-color: black;
+grid-gap: 0;
+}
 
-        .image-container {
-            width: 740px;
-            height: 560px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
+.image-container {
+position: relative;
+width: 740px;
+height: 560px;
+overflow: hidden;
+}
 
-        .image-container img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
-            position: absolute;
-            display: none;
-        }
+.image-container img {
+width: 100%;
+height: 100%;
+object-fit: contain;
+position: absolute;
+display: none;
+}
 
-        .image-container img.active {
-            display: block;
-        }
-    </style>
+.image-container img.active {
+display: block;
+}
+</style>
 </head>
 <body>
-    <div class="grid-container" id="gridContainer"></div>
+<div class="grid-container" id="gridContainer"></div>
 
-    <script>
-        const imageUrls = [
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
-        ];
+<script>
+const imageUrls = [
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
+];
 
-        const gridContainer = document.getElementById("gridContainer");
-        let imageContainers = [];
+const gridContainer = document.getElementById("gridContainer");
+let imageContainers = []; // Array to hold all blocks
+let nextBlockTimer; // Timer for auto-adding blocks
+const rotationDuration = 27 * 300; // 8100ms per full cycle
 
-        function createImageContainer() {
-            let container = document.createElement("div");
-            container.classList.add("image-container");
+// Utility: Fisher-Yates shuffle
+function shuffleArray(arr) {
+for (let i = arr.length - 1; i > 0; i--) {
+const j = Math.floor(Math.random() * (i + 1));
+[arr[i], arr[j]] = [arr[j], arr[i]];
+}
+}
 
-            let shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
-            let images = [];
+// Create a new image block that cycles through the 27 images
+function createImageBlock() {
+// Shuffle images for this block
+let shuffled = [...imageUrls];
+shuffleArray(shuffled);
 
-            shuffledImages.forEach((src, i) => {
-                let img = document.createElement("img");
-                img.src = src;
-                if (i === 0) img.classList.add("active");
-                container.appendChild(img);
-                images.push(img);
-            });
+// Create container element for this block
+const block = document.createElement("div");
+block.classList.add("image-container");
 
-            gridContainer.appendChild(container);
-            imageContainers.push({ container, images, index: 0 });
+// Create <img> elements for each image in the shuffled array
+shuffled.forEach((url, i) => {
+const img = document.createElement("img");
+img.src = url;
+// Only the first image is initially visible
+if (i === 0) img.classList.add("active");
+// Stagger animation delay for a flicker effect (if desired)
+img.style.animationDelay = `${i * 0.1}s`;
+block.appendChild(img);
+});
 
-            updateGridSize();
-            cycleImages(imageContainers.length - 1);
-        }
+gridContainer.appendChild(block);
+imageContainers.push({ block, index: 0, total: shuffled.length });
 
-        function cycleImages(containerIndex) {
-            let imageSet = imageContainers[containerIndex];
-            setInterval(() => {
-                imageSet.images[imageSet.index].classList.remove("active");
-                imageSet.index = (imageSet.index + 1) % imageSet.images.length;
-                imageSet.images[imageSet.index].classList.add("active");
-            }, 300);
-        }
+// Start cycling images for this block
+startBlockCycle(imageContainers.length - 1);
 
-        function updateGridSize() {
-            let numContainers = imageContainers.length;
-            let gridSize = Math.ceil(Math.sqrt(numContainers));
-            let newSize = Math.min(window.innerWidth / gridSize, window.innerHeight / gridSize);
+// Update grid layout
+updateGridLayout();
 
-            imageContainers.forEach(({ container }) => {
-                container.style.width = `${newSize}px`;
-                container.style.height = `${(newSize / 740) * 560}px`;
-            });
-        }
+// Clear any existing timer and set a new one based on the number of blocks
+if (nextBlockTimer) {
+clearTimeout(nextBlockTimer);
+}
+const delay = imageContainers.length < 6 ? rotationDuration : 300;
+nextBlockTimer = setTimeout(createImageBlock, delay);
+}
 
-        document.addEventListener("keydown", (event) => {
-            if (event.key === "Enter") {
-                createImageContainer();
-            }
-        });
+// Function to cycle through images in a given block
+function startBlockCycle(blockIndex) {
+const blockObj = imageContainers[blockIndex];
+const imgs = blockObj.block.querySelectorAll("img");
+setInterval(() => {
+imgs[blockObj.index].classList.remove("active");
+blockObj.index = (blockObj.index + 1) % blockObj.total;
+imgs[blockObj.index].classList.add("active");
+}, 300);
+}
 
-        window.addEventListener("resize", updateGridSize);
+// Update grid layout to make sure blocks are equal-sized and fill the viewport
+function updateGridLayout() {
+const numBlocks = imageContainers.length;
+// Determine number of columns based on viewport width and a minimum block width of 150px, max 10 columns
+const possibleColumns = Math.floor(window.innerWidth / 150);
+const columns = Math.min(possibleColumns, 10) || 1;
+gridContainer.style.display = "grid";
+gridContainer.style.gridTemplateColumns = `repeat(${columns}, 1fr)`;
+gridContainer.style.gridAutoRows = `1fr`;
 
-        createImageContainer();
-    </script>
+// Calculate new block size so they fill the viewport evenly
+const blockWidth = window.innerWidth / columns;
+const rows = Math.ceil(numBlocks / columns);
+const blockHeight = window.innerHeight / rows;
+imageContainers.forEach(({ block }) => {
+block.style.width = `${blockWidth}px`;
+block.style.height = `${blockHeight}px`;
+});
+}
+
+// Event listeners: On desktop, click and Enter; on mobile, tap
+function handleAddBlock(e) {
+if (e.type === "click" || (e.type === "keydown" && e.key === "Enter") || e.type === "touchstart") {
+createImageBlock();
+}
+}
+document.addEventListener("click", handleAddBlock);
+document.addEventListener("keydown", handleAddBlock);
+document.addEventListener("touchstart", handleAddBlock);
+window.addEventListener("resize", updateGridLayout);
+
+// Start the first block on page load
+window.onload = createImageBlock;
+</script>
 </body>
 </html>
