--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ margin: 0;
 padding: 0;
 box-sizing: border-box;
 }
-
 body {
 background-color: black;
 display: flex;
@@ -19,7 +18,6 @@ align-items: center;
 height: 100vh;
 overflow: hidden;
 }
-
 .grid-container {
 display: grid;
 width: 100vw;
@@ -27,14 +25,12 @@ height: 100vh;
 background-color: black;
 grid-gap: 0;
 }
-
 .image-container {
 position: relative;
 width: 740px;
 height: 560px;
 overflow: hidden;
 }
-
 .image-container img {
 width: 100%;
 height: 100%;
@@ -42,7 +38,6 @@ object-fit: contain;
 position: absolute;
 display: none;
 }
-
 .image-container img.active {
 display: block;
 }
@@ -50,7 +45,6 @@ display: block;
 </head>
 <body>
 <div class="grid-container" id="gridContainer"></div>
-
 <script>
 const imageUrls = [
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
@@ -83,11 +77,11 @@ const imageUrls = [
 ];
 
 const gridContainer = document.getElementById("gridContainer");
-let imageContainers = []; // Array to hold all blocks
-let nextBlockTimer; // Timer for auto-adding blocks
+let imageBlocks = []; // Array to hold all image block objects
+let nextBlockTimer;
 const rotationDuration = 27 * 300; // 8100ms per full cycle
 
-// Utility: Fisher-Yates shuffle
+// Fisher-Yates shuffle
 function shuffleArray(arr) {
 for (let i = arr.length - 1; i > 0; i--) {
 const j = Math.floor(Math.random() * (i + 1));
@@ -95,47 +89,48 @@ const j = Math.floor(Math.random() * (i + 1));
 }
 }
 
-// Create a new image block that cycles through the 27 images
+// Create a new image block (an image container that cycles through 27 images)
 function createImageBlock() {
-// Shuffle images for this block
+// Copy and shuffle the image URLs for a new unique order
 let shuffled = [...imageUrls];
 shuffleArray(shuffled);
 
-// Create container element for this block
+// Create a new container element
 const block = document.createElement("div");
 block.classList.add("image-container");
 
-// Create <img> elements for each image in the shuffled array
+// Create an <img> for each URL; only the first image is initially active
 shuffled.forEach((url, i) => {
 const img = document.createElement("img");
 img.src = url;
-// Only the first image is initially visible
-if (i === 0) img.classList.add("active");
-// Stagger animation delay for a flicker effect (if desired)
+if (i === 0) {
+img.classList.add("active");
+}
 img.style.animationDelay = `${i * 0.1}s`;
 block.appendChild(img);
 });
 
+// Append the new block to the grid container
 gridContainer.appendChild(block);
-imageContainers.push({ block, index: 0, total: shuffled.length });
+imageBlocks.push({ block: block, index: 0, total: shuffled.length });
 
-// Start cycling images for this block
-startBlockCycle(imageContainers.length - 1);
+// Update the grid layout (keep layout the same as before)
+updateGridSize();
 
-// Update grid layout
-updateGridLayout();
+// Start cycling images in this block
+startBlockCycle(imageBlocks.length - 1);
 
-// Clear any existing timer and set a new one based on the number of blocks
+// Schedule next block auto-add: if fewer than 6 blocks, wait a full rotation; else, rapid addition
 if (nextBlockTimer) {
 clearTimeout(nextBlockTimer);
 }
-const delay = imageContainers.length < 6 ? rotationDuration : 300;
+const delay = imageBlocks.length < 6 ? rotationDuration : 300;
 nextBlockTimer = setTimeout(createImageBlock, delay);
 }
 
-// Function to cycle through images in a given block
+// Cycle through images in a given block
 function startBlockCycle(blockIndex) {
-const blockObj = imageContainers[blockIndex];
+const blockObj = imageBlocks[blockIndex];
 const imgs = blockObj.block.querySelectorAll("img");
 setInterval(() => {
 imgs[blockObj.index].classList.remove("active");
@@ -144,27 +139,27 @@ imgs[blockObj.index].classList.add("active");
 }, 300);
 }
 
-// Update grid layout to make sure blocks are equal-sized and fill the viewport
-function updateGridLayout() {
-const numBlocks = imageContainers.length;
-// Determine number of columns based on viewport width and a minimum block width of 150px, max 10 columns
+// Update grid layout to keep image blocks equal in size and maintain the original layout
+function updateGridSize() {
+const numBlocks = imageBlocks.length;
+// Determine number of columns based on viewport width and a minimum block width of 150px, maximum 10 columns
 const possibleColumns = Math.floor(window.innerWidth / 150);
 const columns = Math.min(possibleColumns, 10) || 1;
 gridContainer.style.display = "grid";
 gridContainer.style.gridTemplateColumns = `repeat(${columns}, 1fr)`;
 gridContainer.style.gridAutoRows = `1fr`;
 
-// Calculate new block size so they fill the viewport evenly
+// Calculate new block size so that blocks fill the viewport evenly
 const blockWidth = window.innerWidth / columns;
 const rows = Math.ceil(numBlocks / columns);
 const blockHeight = window.innerHeight / rows;
-imageContainers.forEach(({ block }) => {
-block.style.width = `${blockWidth}px`;
-block.style.height = `${blockHeight}px`;
+imageBlocks.forEach(blockObj => {
+blockObj.block.style.width = `${blockWidth}px`;
+blockObj.block.style.height = `${blockHeight}px`;
 });
 }
 
-// Event listeners: On desktop, click and Enter; on mobile, tap
+// Event listeners: on click, Enter key, or touch, add a new block manually
 function handleAddBlock(e) {
 if (e.type === "click" || (e.type === "keydown" && e.key === "Enter") || e.type === "touchstart") {
 createImageBlock();
@@ -173,9 +168,9 @@ createImageBlock();
 document.addEventListener("click", handleAddBlock);
 document.addEventListener("keydown", handleAddBlock);
 document.addEventListener("touchstart", handleAddBlock);
-window.addEventListener("resize", updateGridLayout);
+window.addEventListener("resize", updateGridSize);
 
-// Start the first block on page load
+// Start the first block when the page loads
 window.onload = createImageBlock;
 </script>
 </body>
